@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-16T01:27:55Z",
+  "timestamp" : "2022-07-16T08:17:52Z",
   "count_outdated" : 393,
   "uniques_outdated" : 226,
-  "count" : 424,
-  "uniques" : 243,
+  "count" : 425,
+  "uniques" : 244,
   "clones" : [
     {
       "timestamp": "2022-07-02T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-15T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
